# ProyectoCGeIHC

./: .gitignore  Camera.h  CommonValues.h  Light.h  Material.h  Mesh.h  Proyecto.vcxproj  Proyecto.vcxproj.filters  ProyectoFinal.cpp  Shader_light.h  Skybox.h  Texture.h  Window.cpp  Window.h  definition.h  practica7.cpp
Debug/: Proyecto.exe.recipe  Proyecto.ilk  vc143.idb
Models/: 2975c564035a_colorful_pedestal__.mtl  2e6e63a5b0e2_a_grass_relief_with.mtl  4664362ece24_arbustos_coloridos_.mtl  4ccd7e406105_a_colorful_bench__a.mtl  562bf5e7e7e4_A_BMO_status_from_a.mtl  6db893e07e2f_a_grass_relief_with.mtl  70d4f51a016d_colorful_groud__3d_.mtl  75f17063798c_colorful_groud__3d_.mtl  9303f6cf13af_galactic_mushroom__.mtl  95bc53dfe6b9_colorful_gas_statio.mtl  Finhousesketchfab.fbx  Map__1_MultiTile.tga  STARK.mtl  airtrafic.mtl  arana.mtl  arbol_algodon1.mtl  arbol_algodon2.mtl  arbol_algodon_horaaventura1.mtl  arbol_colores_adventuretime.mtl  arbol_colorido.mtl  arbusto.mtl  aspa.mtl  avionhidra.mtl  banca.mtl  bath.mtl  bfea78575898_ice_king_from_advet.mtl  bicicletaroja.mtl  bimo.fbx  bimo.mtl  bimo_bd.mtl  bimo_bi.mtl  bimo_cuerpo.3ds  bimo_cuerpo.fbx  bimo_cuerpo.mtl  bimo_pierna.mtl  bmo_1.mtl  bmo_cuerpo.mtl  botebasura.mtl  brazo_derecho.mtl  (+74 more)
Proyclinux/: CMakeLists.txt
Proyclinux/Models/: avengers.mtl  cubocesped.mtl  cubopavimento.mtl
Proyclinux/include/: Camera.h  Light.h  Material.h  Mesh.h  Model.h  Shader_light.h  Skybox.h  Texture.h  Window.h  definition.h
Proyclinux/shaders/: shader_light.frag
Proyclinux/src/: Shader_light.cpp  practica7.cpp
(+44 files in other folders)
